--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -222,6 +222,7 @@
   <string name="ConversationFragment_deleting_messages">Suprimint missatges...</string>
   <string name="ConversationFragment_quoted_message_not_found">No s\'ha trobat el missatge original.</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">El missatge original ja no està disponible.</string>
+  <string name="ConversationFragment_failed_to_open_message">Ha fallat obrir el missatge.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">No hi ha cap navegador instal·lat al dispositiu.</string>
   <!--ConversationListFragment-->
