--- a/res/values-cy/strings.xml
+++ b/res/values-cy/strings.xml
@@ -68,6 +68,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Mae ar Signal angen caniatâd Camera er mwyn atodi tynnu lluniau, ond fe\'i rwystrwyd yn barhaol. Ewch i ddewislen gosodiadau\'r ap, dewis "Caniatâd", a galluogi "Camera".</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">Llwytho cyfrwng...</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Cywasgu fideo...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Gwall chwarae sain!</string>
   <!--BlockedContactsActivity-->
@@ -82,6 +83,9 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Methu cadw delwedd</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">Cipio</string>
+  <string name="CameraXFragment_change_camera_description">Newid camera</string>
+  <string name="CameraXFragment_open_gallery_description">Agor yr oriel</string>
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">Cysylltiadau diweddar</string>
   <string name="CameraContacts_signal_contacts">Cysylltiadau Signal</string>
@@ -240,6 +244,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="ConversationFragment_deleting_messages">Dileu negeseuon...</string>
   <string name="ConversationFragment_quoted_message_not_found">Heb ganfod y neges wreiddiol</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Nid yw\'r neges wreiddiol bellach ar gael</string>
+  <string name="ConversationFragment_failed_to_open_message">Methu agor neges</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Nid oes porwr wedi\'i osod ar eich dyfais.</string>
   <!--ConversationListFragment-->
@@ -286,6 +291,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="CreateProfileActivity_profile_name">Enw Proffil</string>
   <string name="CreateProfileActivity_set_up_your_profile">Creu eich proffil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Mae proffiliau Signal wedi eu hamgryprio\'n llwyr ac nid oes gan wasanaeth Signal fynediad i\'r wybodaeth hwn.</string>
+  <string name="CreateProfileActivity_set_avatar_description">Gosod afatar</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Defnyddio\'r cyfaddas: %s</string>
   <string name="CustomDefaultPreference_using_default">Defnyddio rhagosodedig: %s</string>
@@ -451,6 +457,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Gwall wrth lawrlwytho neges MMS, tapio i geisio eto</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Anfon i %s</string>
+  <string name="MediaPickerActivity__menu_open_camera">Agor y camera</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Tapio i ddewis</string>
   <!--MediaSendActivity-->
@@ -800,8 +807,13 @@ Send neges heb ei ddiogelu?</string>
   <string name="WebRtcCallControls_tap_to_enable_your_video">Tapio i alluog\'ch fideo</string>
   <!--WebRtcCallControls Content Descriptions-->
   <string name="WebRtcCallControls_contact_photo_description">Llun cyswllt</string>
+  <string name="WebRtcCallControls_speaker_button_description">Uchelseinydd</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">Bluetooth</string>
   <string name="WebRtcCallControls_mute_button_description">Tewi</string>
+  <string name="WebRtcCallControls_your_camera_button_description">Eich camera</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Newid i\'r camera cefn</string>
   <string name="WebRtcCallControls_answer_call_description">Ateb galwad</string>
+  <string name="WebRtcCallControls_reject_call_description">Gwrthod yr alwad</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Sain</string>
   <string name="attachment_type_selector__audio_description">Sain</string>
@@ -825,6 +837,9 @@ Send neges heb ei ddiogelu?</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Rhowch enw neu rif</string>
   <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">Clirio\'r testun</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">Dangos bysellfwrdd</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">Dangos pad deialu</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Dim cysylltiadau.</string>
   <string name="contact_selection_group_activity__finding_contacts">Llwytho cysylltiadau...</string>
@@ -1247,6 +1262,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="conversation_list_batch_archive__menu_archive_selected">Archif wedi\'i ddewis</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Wedi dewis dadarchifio</string>
   <!--conversation_list-->
+  <string name="conversation_list_settings_shortcut">Llwybr byr gosodiadau</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Cysylltu a\'r Llun Cyswllt</string>
   <string name="conversation_list_item_view__archived">Archifwyd</string>
@@ -1254,6 +1270,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">Na, dim, oll.\n Rydych wedi ei dal i fyny!</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">Sgwrs newydd</string>
+  <string name="conversation_list_fragment__open_camera_description">Agor y Camera</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Rhowch rywbeth gwerth chweil yn eich blwch derbyn. Dechreuwch trwy negesu ffrind.</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">Ailosod sesiwn ddiogel</string>
