--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -62,6 +62,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signalek Kamera baimena behar du argazkiak egiteko baina ukatu egin diozu. Joan aplikazioaren ezarpenetara, aukeratu \"Baimenak\" eta aktibatu \"Kamara\".</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">Multimedia igotzen...</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Bideoa konprimatzen...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Errorea audioa erreproduzitzean!</string>
   <!--BlockedContactsActivity-->
@@ -76,7 +77,19 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Ezin izan da irudia gorde.</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">Argazkia</string>
+  <string name="CameraXFragment_change_camera_description">Aldatu kamera</string>
+  <string name="CameraXFragment_open_gallery_description">Ireki galeria</string>
   <!--CameraContacts-->
+  <string name="CameraContacts_recent_contacts">Azkenaldiko kontaktuak</string>
+  <string name="CameraContacts_signal_contacts">Signal kontaktuak</string>
+  <string name="CameraContacts_signal_groups">Signal taldeak</string>
+  <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">Gehienez ere %d solasaldi harirekin parteka dezakezu.</string>
+  <string name="CameraContacts_select_signal_recipients">Aukeratu Signal hartzaileak</string>
+  <string name="CameraContacts_no_signal_contacts">Signal kontakturik ez</string>
+  <string name="CameraContacts_you_can_only_use_the_camera_button">Signal kontaktuei argazkiak bidaltzeko kamerako botoia erabil dezakezu soilik.</string>
+  <string name="CameraContacts_cant_find_who_youre_looking_for">Ez al duzu aurkitzen bilatzen ari zarena?</string>
+  <string name="CameraContacts_invite_a_contact_to_join_signal">Gonbidatu kontaktu bat Signalera batzeko</string>
   <string name="CameraContacts__menu_search">Bilatu</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Ezabatu</string>
@@ -210,6 +223,7 @@
   <string name="ConversationFragment_deleting_messages">Mezuak ezabatzen...</string>
   <string name="ConversationFragment_quoted_message_not_found">Jatorrizko mezua ez da aurkitu</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Jatorrizko mezua ez dago eskuragarri jada</string>
+  <string name="ConversationFragment_failed_to_open_message">Akatsa mezua irekitzean</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Ez dago nabigatzaile instalaturik zure gailuan.</string>
   <!--ConversationListFragment-->
@@ -248,6 +262,7 @@
   <string name="CreateProfileActivity_profile_name">Profilaren izena</string>
   <string name="CreateProfileActivity_set_up_your_profile">Ezarri zure profila</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signalen profilak muturretik muturrera enkriptatuta daude, eta Signalen zerbitzuak ez dauka informazio hau eskuratzerik.</string>
+  <string name="CreateProfileActivity_set_avatar_description">Ezarri abatarra</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Pertsonalizatua: %s</string>
   <string name="CustomDefaultPreference_using_default">Lehenetsia: %s</string>
@@ -405,6 +420,7 @@
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Errorea MMS mezua jaisterakoan, ukitu berriro saiatzeko</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">%si bidali</string>
+  <string name="MediaPickerActivity__menu_open_camera">Ireki kamera</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Tap egin aukeratzeko</string>
   <!--MediaSendActivity-->
@@ -413,11 +429,14 @@
   <string name="MediaSendActivity_camera_unavailable">Kamera ez dago eskuragarri</string>
   <string name="MediaSendActivity_message_to_s">Honentzako mezua: %s</string>
   <string name="MediaSendActivity_message">Mezua</string>
+  <string name="MediaSendActivity_select_recipients">Aukeratu hartzaileak</string>
   <string name="MediaSendActivity_signal_needs_access_to_your_contacts">Singalek zure kontaktuak lortzeko baimena behar du erakutsi ahal izateko.</string>
+  <string name="MediaSendActivity_signal_needs_contacts_permission_in_order_to_show_your_contacts_but_it_has_been_permanently_denied">Signal-ek Kontaktuen baimena behar du zure kontaktuak erakusteko baina ukatu egin diozu. Joan aplikazioaren ezarpenetara, aukeratu \"Baimenak\", eta gaitu \"Kontaktuak\".</string>
   <plurals name="MediaSendActivity_cant_share_more_than_n_items">
     <item quantity="one">Ezin duzu elementu %d baino gehiago partekatu</item>
     <item quantity="other">Ezin duzu %d elementu baino gehiago partekatu.</item>
   </plurals>
+  <string name="MediaSendActivity_select_recipients_description">Aukeratu hartzaileak</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Euskarri guztiak</string>
   <!--MessageRecord-->
@@ -478,6 +497,7 @@
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Mapa</string>
   <string name="PlacePickerActivity_not_a_valid_address">Ez da baliozko helbide bat</string>
+  <string name="PlacePickerActivity_drop_pin">Baztertu pin-a</string>
   <string name="PlacePickerActivity_accept_address">Onartu helbidea</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Instalatutako Google Play Services bertsioa ez dabil ongi.  Berrinstalatu Google Play Services eta saiatu berriro mesedez.</string>
@@ -556,6 +576,8 @@ zenbakia (%s) baliogabea da.
   <string name="RegistrationActivity_enter_the_code_we_sent_to_s">Sartu %s telefonora bidali dugun kodea.</string>
   <string name="RegistrationActivity_call">Deitu</string>
   <!--RevealableMessageView-->
+  <string name="RevealableMessageView_view_photo">Ikusi argazkia</string>
+  <string name="RevealableMessageView_viewed">Ikusita</string>
   <string name="RevealableMessageView_photo">Argazkia</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Irudien aldaketak gordetzeak huts egin du</string>
@@ -590,6 +612,7 @@ Gakoaren elkar-trukeraro mezua jaso da protokoloaren bertsio baliogabe baterako.
   <string name="SmsMessageRecord_secure_session_reset_s">%s berrezarri saio segurua.</string>
   <string name="SmsMessageRecord_duplicate_message">Mezu bikoiztua.</string>
   <string name="SmsMessageRecord_this_message_could_not_be_processed_because_it_was_sent_from_a_newer_version">Ezin izan da mezu hau prozesatu Signal aplikazioaren bertsio berriago batekin bidali delako. Signal eguneratu eta gero zure kontaktuari mezua berriro bidaltzea eskatu diezaiokezu.</string>
+  <string name="SmsMessageRecord_error_handling_incoming_message">Errorea sarrerako mezua kudeatzean</string>
   <!--StickerManagementActivity-->
   <string name="StickerManagementActivity_stickers">Eranskailuak</string>
   <!--StickerManagementAdapter-->
@@ -617,6 +640,7 @@ Gakoaren elkar-trukeraro mezua jaso da protokoloaren bertsio baliogabe baterako.
   <string name="ThreadRecord_missed_call">Erantzun gabeko deia</string>
   <string name="ThreadRecord_media_message">Multimedia mezua</string>
   <string name="ThreadRecord_sticker">Eranskailua</string>
+  <string name="ThreadRecord_disappearing_photo">Argazkia desagertuta</string>
   <string name="ThreadRecord_s_is_on_signal">%sSignal-en dago!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Mezuen desagerpena ezgaituta dago</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Desagertzen diren mezuen debora %s-tan ezarrita</string>
@@ -691,6 +715,7 @@ Gakoaren elkar-trukeraro mezua jaso da protokoloaren bertsio baliogabe baterako.
   <string name="MessageNotifier_mark_read">Markatu irakurritako gisa</string>
   <string name="MessageNotifier_media_message">Multimedia mezua</string>
   <string name="MessageNotifier_sticker">Eranskailua</string>
+  <string name="MessageNotifier_disappearing_photo">Argazkia desagertuta</string>
   <string name="MessageNotifier_reply">Erantzun</string>
   <string name="MessageNotifier_signal_message">Signal mezua</string>
   <string name="MessageNotifier_unsecured_sms">SMS ez segurua</string>
@@ -746,8 +771,12 @@ Gakoaren elkar-trukeraro mezua jaso da protokoloaren bertsio baliogabe baterako.
   <!--WebRtcCallControls Content Descriptions-->
   <string name="WebRtcCallControls_contact_photo_description">Kontaktuaren argazkia</string>
   <string name="WebRtcCallControls_speaker_button_description">Bozgorailua</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">Bluetooth </string>
   <string name="WebRtcCallControls_mute_button_description">Isildu</string>
+  <string name="WebRtcCallControls_your_camera_button_description">Zure kamera</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Aldatu atzeko kamerara</string>
   <string name="WebRtcCallControls_answer_call_description">Erantzun deia</string>
+  <string name="WebRtcCallControls_reject_call_description">Ezetsi deia</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Audioa</string>
   <string name="attachment_type_selector__audio_description">Audioa</string>
@@ -771,6 +800,9 @@ Gakoaren elkar-trukeraro mezua jaso da protokoloaren bertsio baliogabe baterako.
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Idatzi izena edo zenbakia</string>
   <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">Garbitu idatzitako testua</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">Erakutsi teklatua</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">Erakutsi markagailua</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Kontakturik ez.</string>
   <string name="contact_selection_group_activity__finding_contacts">Kontaktuak kargatzen...</string>
@@ -1178,6 +1210,7 @@ Inportatu \'SMSBackup and Restorekin\' bateragarria den zifratu gabeko babeskopi
   <string name="conversation_list_batch_archive__menu_archive_selected">Artxibatze hautatua</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Desartxibatze hautatua</string>
   <!--conversation_list-->
+  <string name="conversation_list_settings_shortcut">Ezarpenen lasterbidea</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Kontaktuaren argazkia</string>
   <string name="conversation_list_item_view__archived">Artxibatuta</string>
@@ -1185,6 +1218,7 @@ Inportatu \'SMSBackup and Restorekin\' bateragarria den zifratu gabeko babeskopi
   <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">Ezer ere ez.\nDena hutsik!</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">Solasaldi berria</string>
+  <string name="conversation_list_fragment__open_camera_description">Ireki kamera</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Jarri zerbait zure sarrerako ontzian lagun bati zerbait idatziz.</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">Berrezarri saio segurua </string>
