--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -222,6 +222,7 @@
   <string name="ConversationFragment_deleting_messages">Cancellazione messaggi...</string>
   <string name="ConversationFragment_quoted_message_not_found">Messaggio originale non trovato</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Messaggio originale non più disponibile</string>
+  <string name="ConversationFragment_failed_to_open_message">Apertura messaggio fallita</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Sul tuo dispositivo non ci sono browser installati.</string>
   <!--ConversationListFragment-->
