--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -68,6 +68,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal דורש את הרשאת המצלמה על מנת לצלם תצלומים, אבל היא נדחתה לצמיתות. אנא המשך אל תפריט הגדרות היישום, בחר \"הרשאות\" ואפשר את \"מצלמה\".</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">מעלה מדיה...</string>
+  <string name="AttachmentUploadJob_compressing_video_start">דוחס וידיאו...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">שגיאה בניגון שמע!</string>
   <!--BlockedContactsActivity-->
@@ -82,6 +83,9 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">נכשל בשמירת תמונה.</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">לכוד</string>
+  <string name="CameraXFragment_change_camera_description">שנה מצלמה</string>
+  <string name="CameraXFragment_open_gallery_description">פתח גלריה</string>
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">אנשי קשר אחרונים</string>
   <string name="CameraContacts_signal_contacts">אנשי קשר של Signal</string>
@@ -238,6 +242,7 @@
   <string name="ConversationFragment_deleting_messages">מוחק הודעות...</string>
   <string name="ConversationFragment_quoted_message_not_found">הודעה מקורית לא נמצאה</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">הודעה מקורית כבר אינה זמינה</string>
+  <string name="ConversationFragment_failed_to_open_message">נכשל בפתיחת הודעה</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">אין דפדפן מותקן במכשיר שלך.</string>
   <!--ConversationListFragment-->
@@ -284,6 +289,7 @@
   <string name="CreateProfileActivity_profile_name">שם פרופיל</string>
   <string name="CreateProfileActivity_set_up_your_profile">הגדר את הפרופיל שלך</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">פרופילי Signal מוצפנים מקצה לקצה, ולשירות Signal אין אף פעם גישה אל מידע זה.</string>
+  <string name="CreateProfileActivity_set_avatar_description">הגדר יצגן</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">משתמש בהגדרה מותאמת אישית: %s</string>
   <string name="CustomDefaultPreference_using_default">משתמש בברירת מחדל: %s</string>
@@ -449,6 +455,7 @@
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">שגיאה בהורדת הודעת MMS, הקש כדי לנסות שוב</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">שלח אל %s</string>
+  <string name="MediaPickerActivity__menu_open_camera">פתח מצלמה</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">הקש כדי לבחור</string>
   <!--MediaSendActivity-->
@@ -799,8 +806,12 @@
   <!--WebRtcCallControls Content Descriptions-->
   <string name="WebRtcCallControls_contact_photo_description">תצלום איש קשר</string>
   <string name="WebRtcCallControls_speaker_button_description">רמקול</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">Bluetooth</string>
   <string name="WebRtcCallControls_mute_button_description">השתק</string>
+  <string name="WebRtcCallControls_your_camera_button_description">המצלמה שלך</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">החלף אל מצלמה אחורית</string>
   <string name="WebRtcCallControls_answer_call_description">ענה לשיחה</string>
+  <string name="WebRtcCallControls_reject_call_description">דחה שיחה</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">שמע</string>
   <string name="attachment_type_selector__audio_description">שמע</string>
@@ -824,6 +835,9 @@
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">הכנס שם או מספר</string>
   <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">נקה טקסט מוכנס</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">הראה מקלדת</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">הראה משטח חיוג</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">אין אנשי קשר.</string>
   <string name="contact_selection_group_activity__finding_contacts">טוען אנשי קשר...</string>
@@ -1246,6 +1260,7 @@
   <string name="conversation_list_batch_archive__menu_archive_selected">אחסן בארכיון נבחרים</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">הוצא מארכיון נבחרים</string>
   <!--conversation_list-->
+  <string name="conversation_list_settings_shortcut">קיצור דרך להגדרות</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">תמונת איש קשר</string>
   <string name="conversation_list_item_view__archived">מאוחסן בארכיון</string>
@@ -1253,6 +1268,7 @@
   <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">כלום. שמץ. אפס. שום דבר.\nאתה מסודר!</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">שיחה חדשה</string>
+  <string name="conversation_list_fragment__open_camera_description">פתח מצלמה</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">תן לתיבת הדואר הנכנס שלך משהו לכתוב עליו בית. התחל ע\"י שליחת הודעה לחבר.</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">אפס שיח מאובטח</string>
