--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -222,6 +222,7 @@
   <string name="ConversationFragment_deleting_messages">Berichten aan het wissen…</string>
   <string name="ConversationFragment_quoted_message_not_found">Oorspronkelijk bericht niet gevonden</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Het oorspronkelijke bericht is niet langer beschikbaar</string>
+  <string name="ConversationFragment_failed_to_open_message">Openen van bericht is mislukt</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Er is geen browser op je apparaat geïnstalleerd.</string>
   <!--ConversationListFragment-->
