--- a/res/values-nn/strings.xml
+++ b/res/values-nn/strings.xml
@@ -62,6 +62,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal treng tilgang til kameraet for å ta bilete, men tilgangen er permanent avslått. Opna app-innstillingsmenyen og vel «Tilgang» – eventuelt «Tillatelser» – og skru på «Kamera».</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">Lastar opp media …</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Komprimerer video …</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Det oppstod ein feil under lydavspeling.</string>
   <!--BlockedContactsActivity-->
@@ -76,6 +77,9 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Klarte ikkje lagra biletet.</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">Ta opp</string>
+  <string name="CameraXFragment_change_camera_description">Byt kamera</string>
+  <string name="CameraXFragment_open_gallery_description">Opna galleri</string>
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">Nylege kontaktar</string>
   <string name="CameraContacts_signal_contacts">Signal-kontaktar</string>
@@ -218,6 +222,7 @@
   <string name="ConversationFragment_deleting_messages">Slettar meldingar …</string>
   <string name="ConversationFragment_quoted_message_not_found">Fann ikkje den opphavlege meldinga</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Den opphavlege meldinga er ikkje lenger tilgjengeleg</string>
+  <string name="ConversationFragment_failed_to_open_message">Klarte ikkje opna meldinga</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Denne eininga har ingen nettlesar installert.</string>
   <!--ConversationListFragment-->
@@ -256,6 +261,7 @@
   <string name="CreateProfileActivity_profile_name">Profilnamn</string>
   <string name="CreateProfileActivity_set_up_your_profile">Lag profilen din</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal-profilar er krypterte ende-til-ende, og Signal-tenesta har aldri tilgang til denne informasjonen.</string>
+  <string name="CreateProfileActivity_set_avatar_description">Vel avatar</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Brukar sjølvvald: %s</string>
   <string name="CustomDefaultPreference_using_default">Brukar forvald: %s</string>
@@ -413,6 +419,7 @@
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Klarte ikkje lasta ned MMS-melding, trykk for å prøva igjen</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Send til %s</string>
+  <string name="MediaPickerActivity__menu_open_camera">Opna kamera</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Trykk for å velja</string>
   <!--MediaSendActivity-->
@@ -760,8 +767,12 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversjon.</string>
   <!--WebRtcCallControls Content Descriptions-->
   <string name="WebRtcCallControls_contact_photo_description">Kontaktfoto</string>
   <string name="WebRtcCallControls_speaker_button_description">Høgtalar</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">Blåtann</string>
   <string name="WebRtcCallControls_mute_button_description">Demp</string>
+  <string name="WebRtcCallControls_your_camera_button_description">Kameraet ditt</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Byt til bakkamera</string>
   <string name="WebRtcCallControls_answer_call_description">Svar på anrop</string>
+  <string name="WebRtcCallControls_reject_call_description">Avvis samtale</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Lyd</string>
   <string name="attachment_type_selector__audio_description">Lyd</string>
@@ -785,6 +796,9 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversjon.</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Skriv inn namn eller nummer</string>
   <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">Tøm tekstfeltet</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">Vis tastatur</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">Vis nummerskiva</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">ingen kontaktar.</string>
   <string name="contact_selection_group_activity__finding_contacts">Lastar inn kontaktar …</string>
@@ -1193,6 +1207,7 @@ Ved registrering sender me litt kontaktinformasjon til tenaren. Informasjonen ve
   <string name="conversation_list_batch_archive__menu_archive_selected">Arkiver utval</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Angra arkivering av utval</string>
   <!--conversation_list-->
+  <string name="conversation_list_settings_shortcut">Snarveg til innstillingar</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Kontaktfoto</string>
   <string name="conversation_list_item_view__archived">Arkivert</string>
@@ -1201,6 +1216,7 @@ Ved registrering sender me litt kontaktinformasjon til tenaren. Informasjonen ve
 Du er à jour!</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">Ny samtale</string>
+  <string name="conversation_list_fragment__open_camera_description">Opna kamera</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Gje innboksen din noko å skriva heim om. Kom i gang ved å melda med ein venn.</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">Tilbakestill sikker økt</string>
