--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -62,6 +62,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">O Signal precisa da permissão Câmera para tirar fotos, mas ela foi permanentemente negada. Favor ir no menu de configurações de aplicativos, selecionar \"Permissões\", e habilitar \"Câmera\".</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">Enviando mídia…</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Comprimindo vídeo...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Erro ao tocar áudio!</string>
   <!--BlockedContactsActivity-->
@@ -76,6 +77,9 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Falha ao salvar imagem.</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">Capturar</string>
+  <string name="CameraXFragment_change_camera_description">Mudar de câmera</string>
+  <string name="CameraXFragment_open_gallery_description">Abrir galeria</string>
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">Contatos recentes</string>
   <string name="CameraContacts_signal_contacts">Contatos do Signal</string>
@@ -218,6 +222,7 @@
   <string name="ConversationFragment_deleting_messages">Excluindo mensagens...</string>
   <string name="ConversationFragment_quoted_message_not_found">Mensagem original não encontrada</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Mensagem original indisponível</string>
+  <string name="ConversationFragment_failed_to_open_message">Falha ao abrir mensagem</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Não há nenhum navegador instalado no seu dispositivo.</string>
   <!--ConversationListFragment-->
@@ -256,6 +261,7 @@
   <string name="CreateProfileActivity_profile_name">Nome de perfil</string>
   <string name="CreateProfileActivity_set_up_your_profile">Crie seu perfil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Os perfis do Signal são criptografados de ponta a ponta, e o Signal jamais tem acesso a estas informações.</string>
+  <string name="CreateProfileActivity_set_avatar_description">Definir avatar</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Usando personalização: %s</string>
   <string name="CustomDefaultPreference_using_default">Usando padrão: %s</string>
@@ -413,6 +419,7 @@
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Erro ao baixar mensagem MMS, clique para tentar novamente</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Enviar para %s</string>
+  <string name="MediaPickerActivity__menu_open_camera">Abrir câmera</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Toque para selecionar</string>
   <!--MediaSendActivity-->
@@ -763,8 +770,12 @@
   <!--WebRtcCallControls Content Descriptions-->
   <string name="WebRtcCallControls_contact_photo_description">Foto do contato</string>
   <string name="WebRtcCallControls_speaker_button_description">Caixa de som</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">Bluetooth</string>
   <string name="WebRtcCallControls_mute_button_description">Mudo</string>
+  <string name="WebRtcCallControls_your_camera_button_description">Sua câmera</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Trocar para câmera traseira</string>
   <string name="WebRtcCallControls_answer_call_description">Atender ligação</string>
+  <string name="WebRtcCallControls_reject_call_description">Recusar chamada</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Áudio</string>
   <string name="attachment_type_selector__audio_description">Áudio</string>
@@ -788,6 +799,9 @@
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Digite o nome ou número</string>
   <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">Limpar texto inserido</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">Mostrar teclado</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">Mostrar discador</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Nenhum contato.</string>
   <string name="contact_selection_group_activity__finding_contacts">Carregando contatos...</string>
@@ -1201,6 +1215,7 @@
   <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">Zero. Nada.\nVocê está com tudo em dia!</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">Nova conversa</string>
+  <string name="conversation_list_fragment__open_camera_description">Abrir câmera</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Que tal movimentar as coisas por aqui? Comece mandando uma mensagem para alguém.</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">Reiniciar sessão segura</string>
