--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -62,6 +62,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">O Signal requer permissão de acesso à câmara para poder tirar fotos, mas esta foi negada permanentemente. Por favor aceda às definições da aplicação, seleccione \"Permissões\" e ative \"Câmara\".</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">A carregar média...</string>
+  <string name="AttachmentUploadJob_compressing_video_start">A comprimir vídeo...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Erro ao reproduzir áudio!</string>
   <!--BlockedContactsActivity-->
@@ -76,6 +77,9 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Não foi possível guardar a imagem.</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">Capturar</string>
+  <string name="CameraXFragment_change_camera_description">Alterar câmara</string>
+  <string name="CameraXFragment_open_gallery_description">Abrir galeria</string>
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">Contactos recentes</string>
   <string name="CameraContacts_signal_contacts">Contactos Signal</string>
@@ -218,6 +222,7 @@
   <string name="ConversationFragment_deleting_messages">A eliminar mensagens...</string>
   <string name="ConversationFragment_quoted_message_not_found">Não foi encontrada a mensagem original</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">A mensagem original já não está disponível</string>
+  <string name="ConversationFragment_failed_to_open_message">Falha ao abrir a mensagem</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Não existe nenhum navegador instalado no seu dispositivo.</string>
   <!--ConversationListFragment-->
@@ -256,6 +261,7 @@
   <string name="CreateProfileActivity_profile_name">Nome de perfil</string>
   <string name="CreateProfileActivity_set_up_your_profile">Configurar o seu perfil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Os perfis do Signal são encriptados de extremo-a-extremo e o serviço do Signal nunca tem acesso a esta informação.</string>
+  <string name="CreateProfileActivity_set_avatar_description">Definir avatar</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Usar a opção personalizada: %s</string>
   <string name="CustomDefaultPreference_using_default">A usar a opção predefinida: %s</string>
@@ -413,6 +419,7 @@
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Erro ao descarregar a mensagem MMS, toque para repetir</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Enviar para %s</string>
+  <string name="MediaPickerActivity__menu_open_camera">Abrir câmara</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Tocar para selecionar</string>
   <!--MediaSendActivity-->
@@ -757,10 +764,14 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <!--WebRtcCallControls-->
   <string name="WebRtcCallControls_tap_to_enable_your_video">Toque para ligar o vídeo</string>
   <!--WebRtcCallControls Content Descriptions-->
-  <string name="WebRtcCallControls_contact_photo_description">Foto de contacto</string>
-  <string name="WebRtcCallControls_speaker_button_description">Alta voz</string>
+  <string name="WebRtcCallControls_contact_photo_description">Fotografia do contacto</string>
+  <string name="WebRtcCallControls_speaker_button_description">Altifalante</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">Bluetooth</string>
   <string name="WebRtcCallControls_mute_button_description">Silenciar</string>
+  <string name="WebRtcCallControls_your_camera_button_description">A sua câmara</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Mudar para a câmara traseira</string>
   <string name="WebRtcCallControls_answer_call_description">Atender chamada</string>
+  <string name="WebRtcCallControls_reject_call_description">Rejeitar chamada</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Áudio</string>
   <string name="attachment_type_selector__audio_description">Áudio</string>
@@ -784,6 +795,9 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Introduza o nome ou número</string>
   <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">Limpara o texto introduzido</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">Exibir teclado</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">Exibir teclado de marcação</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Sem contactos.</string>
   <string name="contact_selection_group_activity__finding_contacts">A carregar contactos…</string>
@@ -1190,6 +1204,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="conversation_list_batch_archive__menu_archive_selected">Arquivar selecionado(s)</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Desarquivar selecionado(s)</string>
   <!--conversation_list-->
+  <string name="conversation_list_settings_shortcut">Atalho para definições</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Foto de contacto</string>
   <string name="conversation_list_item_view__archived">Arquivado</string>
@@ -1197,6 +1212,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">Zip. Népia. Zero. Nada.\nEstá completamente a par!</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">Nova conversa</string>
+  <string name="conversation_list_fragment__open_camera_description">Abrir câmara</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Dê à sua caixa de entrada alguma escrita. Comece por enviar uma mensagem para um amigo.</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">Reiniciar sessão segura</string>
