--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -65,6 +65,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal are nevoie de permisiunea pentru Cameră pentru a putea face poze dar i-a fost refuzat accesul permanent. Vă rog navigați în meniul de setări al aplicației, selectați \"Permisiuni\" și activați \"Cameră\".</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">Se încarcă media...</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Se comprimă video-ul...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Eroare la redarea audio!</string>
   <!--BlockedContactsActivity-->
@@ -79,7 +80,19 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Eroare la salvarea imaginii.</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">Capturați</string>
+  <string name="CameraXFragment_change_camera_description">Schimbați camera</string>
+  <string name="CameraXFragment_open_gallery_description">Deschideți galeria</string>
   <!--CameraContacts-->
+  <string name="CameraContacts_recent_contacts">Contacte recente</string>
+  <string name="CameraContacts_signal_contacts">Contacte Signal</string>
+  <string name="CameraContacts_signal_groups">Grupuri Signal</string>
+  <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">Puteți partaja cu un maxim de %d conversații.</string>
+  <string name="CameraContacts_select_signal_recipients">Selectați destinatarii Signal</string>
+  <string name="CameraContacts_no_signal_contacts">Nici un contact Signal</string>
+  <string name="CameraContacts_you_can_only_use_the_camera_button">Puteți utiliza butonul aparatului foto pentru a trimite fotografii doar la contactele Signal.</string>
+  <string name="CameraContacts_cant_find_who_youre_looking_for">Nu puteți găsi pe cine căutați?</string>
+  <string name="CameraContacts_invite_a_contact_to_join_signal">Invitați un contact să se alăture pe Signal</string>
   <string name="CameraContacts__menu_search">Căutați</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Eliminați</string>
@@ -219,6 +232,7 @@
   <string name="ConversationFragment_deleting_messages">Se șterg mesajele...</string>
   <string name="ConversationFragment_quoted_message_not_found">Mesajul original nu a fost găsit</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Mesajul original nu mai este disponibil</string>
+  <string name="ConversationFragment_failed_to_open_message">Mesajul nu a putut fi deschis</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Nu aveți nici un browser instalat pe dispozitivul dvs.</string>
   <!--ConversationListFragment-->
@@ -261,6 +275,7 @@
   <string name="CreateProfileActivity_profile_name">Nume profil</string>
   <string name="CreateProfileActivity_set_up_your_profile">Configurează-ți profilul</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Profilurile Signal sunt criptate integral, iar serviciul Signal nu are niciodată acces la aceste informații.</string>
+  <string name="CreateProfileActivity_set_avatar_description">Setează avatar</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Personalizat: %s</string>
   <string name="CustomDefaultPreference_using_default">Implicit: %s</string>
@@ -422,6 +437,7 @@
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Eroare la descărcarea mesajului MMS, apasă pentru reîncercare</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Trimiteți la %s</string>
+  <string name="MediaPickerActivity__menu_open_camera">Deschideți camera</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Apăsați pentru a selecta</string>
   <!--MediaSendActivity-->
@@ -430,12 +446,15 @@
   <string name="MediaSendActivity_camera_unavailable">Cameră indisponibilă.</string>
   <string name="MediaSendActivity_message_to_s">Mesaj către %s</string>
   <string name="MediaSendActivity_message">Mesaj</string>
+  <string name="MediaSendActivity_select_recipients">Selectați destinatarii</string>
   <string name="MediaSendActivity_signal_needs_access_to_your_contacts">Signal are nevoie de acces la contactele tale pentru a le afișa.</string>
+  <string name="MediaSendActivity_signal_needs_contacts_permission_in_order_to_show_your_contacts_but_it_has_been_permanently_denied">Signal are nevoie de permisiunea pentru Contacte pentru a putea afișa contactele tale dar i-a fost refuzat accesul permanent. Vă rog navigați în meniul de setări al aplicației, selectați \"Permisiuni\" și activați \"Contacte\".</string>
   <plurals name="MediaSendActivity_cant_share_more_than_n_items">
     <item quantity="one">Nu puteți partaja mai mult de %d element.</item>
     <item quantity="few">Nu puteți partaja mai mult de %d element.</item>
     <item quantity="other">Nu puteți partaja mai mult de %d elemente.</item>
   </plurals>
+  <string name="MediaSendActivity_select_recipients_description">Selectați destinatarii</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Toate fișierele media</string>
   <!--MessageRecord-->
@@ -635,6 +654,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="ThreadRecord_missed_call">Apel nepreluat</string>
   <string name="ThreadRecord_media_message">Mesaj media</string>
   <string name="ThreadRecord_sticker">Autocolant</string>
+  <string name="ThreadRecord_disappearing_photo">Poză care dispare</string>
   <string name="ThreadRecord_s_is_on_signal">%s folosește Signal!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Mesajele care dispar sunt dezactivate</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Timpul setat pentru mesajele care dispar este %s</string>
@@ -709,6 +729,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="MessageNotifier_mark_read">Marchează ca citit</string>
   <string name="MessageNotifier_media_message">Mesaj media</string>
   <string name="MessageNotifier_sticker">Autocolant</string>
+  <string name="MessageNotifier_disappearing_photo">Poză care dispare</string>
   <string name="MessageNotifier_reply">Răspunde</string>
   <string name="MessageNotifier_signal_message">Mesaj Signal</string>
   <string name="MessageNotifier_unsecured_sms">SMS nesecurizat</string>
@@ -765,8 +786,12 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <!--WebRtcCallControls Content Descriptions-->
   <string name="WebRtcCallControls_contact_photo_description">Poză contact</string>
   <string name="WebRtcCallControls_speaker_button_description">Difuzor</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">Bluetooth</string>
   <string name="WebRtcCallControls_mute_button_description">Fără sunet</string>
+  <string name="WebRtcCallControls_your_camera_button_description">Camera ta</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Comutați pe camera din spate</string>
   <string name="WebRtcCallControls_answer_call_description">Răspundeți apelului</string>
+  <string name="WebRtcCallControls_reject_call_description">Respingeți apelul</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Audio</string>
   <string name="attachment_type_selector__audio_description">Audio</string>
@@ -790,6 +815,9 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Introduceți un nume sau un număr</string>
   <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">Ștergeți textul introdus</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">Afișați tastatura</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">Afișați tastatura numerică</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Nu aveți contacte.</string>
   <string name="contact_selection_group_activity__finding_contacts">Se încarcă contactele...</string>
@@ -1205,6 +1233,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="conversation_list_batch_archive__menu_archive_selected">Arhivă selectată</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Dezarhivare selectată</string>
   <!--conversation_list-->
+  <string name="conversation_list_settings_shortcut">Scurtătură Setări</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Poză contact</string>
   <string name="conversation_list_item_view__archived">Arhivat</string>
@@ -1212,6 +1241,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">Gol. Zero. Nimic.\n Sunteți la curent cu toate!</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">Conversație nouă</string>
+  <string name="conversation_list_fragment__open_camera_description">Deschideți camera</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Dă-i inbox-ului ceva de scris. Începeți prin a trimite unui prieten un mesaj.</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">Resetează sesiunea securizată</string>
