--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -68,6 +68,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal potrebuje prístup k fotoaparátu aby mohol vytvárať fotografie, ale prístup bol natrvalo zakázaný. Prosím v nastaveniach aplikácií zvoľte \"Oprávnenia\", a povoľte \"Fotoaparát\".</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">Nahrávanie prílohy…</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Komprimuje sa video...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Chyba pri prehrávaní zvuku!</string>
   <!--BlockedContactsActivity-->
@@ -82,6 +83,9 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Obrázok sa nepodarilo uložiť.</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">Zachytiť</string>
+  <string name="CameraXFragment_change_camera_description">Zmeniť fotoaparát</string>
+  <string name="CameraXFragment_open_gallery_description">Otvoriť galériu</string>
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">Nedávne kontakty</string>
   <string name="CameraContacts_signal_contacts">Kontakty Signal</string>
@@ -238,6 +242,7 @@
   <string name="ConversationFragment_deleting_messages">Mažú sa správy...</string>
   <string name="ConversationFragment_quoted_message_not_found">Pôvodná správa sa nenašla</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Pôvodná správa už nie je k dispozícii</string>
+  <string name="ConversationFragment_failed_to_open_message">Nepodarilo sa otvoriť správu</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Nemáte nainštalovaný žiadny prehliadač.</string>
   <!--ConversationListFragment-->
@@ -284,6 +289,7 @@
   <string name="CreateProfileActivity_profile_name">Profilové meno</string>
   <string name="CreateProfileActivity_set_up_your_profile">Nastavte si svoj profil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Profily Signal sú end-to-end šifrované a služba Signal nikdy nemá prístup k týmto informáciám.</string>
+  <string name="CreateProfileActivity_set_avatar_description">Nastaviť avatar</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Používa sa vlastné: %s</string>
   <string name="CustomDefaultPreference_using_default">Používa sa predvolené: %s</string>
@@ -449,6 +455,7 @@
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Chyba pri preberaní MMS správy, ťuknite pre opakovanie</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Poslať používateľovi %s</string>
+  <string name="MediaPickerActivity__menu_open_camera">Otvoriť fotoaparát</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Označte ťuknutím</string>
   <!--MediaSendActivity-->
@@ -804,8 +811,12 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <!--WebRtcCallControls Content Descriptions-->
   <string name="WebRtcCallControls_contact_photo_description">Fotka kontaktu</string>
   <string name="WebRtcCallControls_speaker_button_description">Reproduktor</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">Bluetooth</string>
   <string name="WebRtcCallControls_mute_button_description">Stlmiť</string>
+  <string name="WebRtcCallControls_your_camera_button_description">Váš fotoaparát</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Prepnúť na zadný fotoaparát</string>
   <string name="WebRtcCallControls_answer_call_description">Prijať hovor</string>
+  <string name="WebRtcCallControls_reject_call_description">Odmietnuť hovor</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Zvuk</string>
   <string name="attachment_type_selector__audio_description">Zvuk</string>
@@ -829,6 +840,9 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Zadajte meno alebo číslo</string>
   <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">Vymazať zadaný text</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">Zobraziť klávesnicu</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">Zobraziť číselnú klávesnicu</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Žiadne kontakty.</string>
   <string name="contact_selection_group_activity__finding_contacts">Načítavanie kontaktov…</string>
@@ -1251,6 +1265,7 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="conversation_list_batch_archive__menu_archive_selected">Vybratý archív</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Obnoviť vybrané z archívu</string>
   <!--conversation_list-->
+  <string name="conversation_list_settings_shortcut">Skratka pre Nastavenia</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Fotka kontaktu</string>
   <string name="conversation_list_item_view__archived">Archivované</string>
@@ -1258,6 +1273,7 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">Prázdno.</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">Nová konverzácia</string>
+  <string name="conversation_list_fragment__open_camera_description">Otvoriť fotoaparát</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Pridajte niečo do schránky. Pošlite správu priateľom.</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">Resetovať zabezpečenú reláciu</string>
