--- a/res/values-sq/strings.xml
+++ b/res/values-sq/strings.xml
@@ -62,6 +62,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Që të mund të bëjë foto, Signal-i lyp leje përdorimi Kamere, por kjo i është mohuar. Ju lutemi, vazhdoni për te menuja e rregullimeve të aplikacionit, përzgjidhni \"Leje\", dhe aktivizoni \"Kamerë\".</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">Po ngarkohet media…</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Po ngjeshet video…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Gabim në luajtjen e audios!</string>
   <!--BlockedContactsActivity-->
@@ -76,7 +77,18 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">S\’u arrit të ruhej figura.</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_change_camera_description">Ndërroni kamera</string>
+  <string name="CameraXFragment_open_gallery_description">Hap galerinë</string>
   <!--CameraContacts-->
+  <string name="CameraContacts_recent_contacts">Kontakte së fundi</string>
+  <string name="CameraContacts_signal_contacts">Grupe Signal</string>
+  <string name="CameraContacts_signal_groups">Grupe Signal</string>
+  <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">Mund të ndani gjëra me e shumta %d biseda.</string>
+  <string name="CameraContacts_select_signal_recipients">Përzgjidhni marrës Signal</string>
+  <string name="CameraContacts_no_signal_contacts">S’ka kontakte Signal</string>
+  <string name="CameraContacts_you_can_only_use_the_camera_button">Butonin e kamerës mund ta përdorni vetëm për të dërguar foto te kontakte Signal. </string>
+  <string name="CameraContacts_cant_find_who_youre_looking_for">S’gjeni dot atë që po kërkoni?</string>
+  <string name="CameraContacts_invite_a_contact_to_join_signal">Ftoni një kontakt të bëhet pjesë e Signal-it</string>
   <string name="CameraContacts__menu_search">Kërko</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Hiqe</string>
@@ -209,6 +221,7 @@
   <string name="ConversationFragment_deleting_messages">Po fshihen mesazhe…</string>
   <string name="ConversationFragment_quoted_message_not_found">S\’u gjet mesazhi origjinal</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Mesazhi origjinal s\’gjendet më</string>
+  <string name="ConversationFragment_failed_to_open_message">S’u arrit të hapet mesazhe</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Në pajisjen tuaj s\’ka shfletues të instaluar.</string>
   <!--ConversationListFragment-->
@@ -247,6 +260,7 @@
   <string name="CreateProfileActivity_profile_name">Emër Profili</string>
   <string name="CreateProfileActivity_set_up_your_profile">Ujdisni profilin tuaj</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Profilet Signal fshehtëzohen skaj-më-skaj, dhe shërbimi Signal s\’mund të hyjë kurrë në këto të dhëna.</string>
+  <string name="CreateProfileActivity_set_avatar_description">Caktoni avatar</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Me përdorim të një të përshtaturi: %s</string>
   <string name="CustomDefaultPreference_using_default">Me përdorim parazgjedhjeje: %s</string>
@@ -404,6 +418,7 @@
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Gabim në shkarkim mesazhi MMS, prekeni që të riprovohet</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Dërgoje te %s</string>
+  <string name="MediaPickerActivity__menu_open_camera">Hapni kamerën</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Prekeni që të përzgjidhet</string>
   <!--MediaSendActivity-->
@@ -412,11 +427,14 @@
   <string name="MediaSendActivity_camera_unavailable">Kamera jo gati</string>
   <string name="MediaSendActivity_message_to_s">Mesazh për %s</string>
   <string name="MediaSendActivity_message">Mesazh</string>
+  <string name="MediaSendActivity_select_recipients">Përzgjidhni marrës</string>
   <string name="MediaSendActivity_signal_needs_access_to_your_contacts">Që të mund t\’i shfaqë, Signal-i lyp leje përdorimi të kontakteve.</string>
+  <string name="MediaSendActivity_signal_needs_contacts_permission_in_order_to_show_your_contacts_but_it_has_been_permanently_denied">Signal-i lyp leje mbi Kontaktet që të mund të shfaqë kontaktet tuaja, por kjo i është mohuar përgjithmonë. Ju lutemi, kaloni te rregullimet e aplikacionit, përzgjidhni \"Leje\", dhe aktivizoni \"Kontakte\".</string>
   <plurals name="MediaSendActivity_cant_share_more_than_n_items">
     <item quantity="one">S\’mund të ndani me të tjerët më shumë se %d objekte.</item>
     <item quantity="other">S\’mund të ndani me të tjerët më shumë se %d objekte.</item>
   </plurals>
+  <string name="MediaSendActivity_select_recipients_description">Përzgjidhni marrës</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Krejt mediat</string>
   <!--MessageRecord-->
@@ -553,6 +571,8 @@
   <string name="RegistrationActivity_enter_the_code_we_sent_to_s">Jepni kodin që dërguam te %s</string>
   <string name="RegistrationActivity_call">Thirrje</string>
   <!--RevealableMessageView-->
+  <string name="RevealableMessageView_view_photo">Shihni Foton</string>
+  <string name="RevealableMessageView_viewed">Parë</string>
   <string name="RevealableMessageView_photo">Foto</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">S’u arrit të ruheshin ndryshime të figurës.</string>
@@ -613,6 +633,7 @@
   <string name="ThreadRecord_missed_call">Thirrje e humbur</string>
   <string name="ThreadRecord_media_message">Mesazh media</string>
   <string name="ThreadRecord_sticker">Ngjitës</string>
+  <string name="ThreadRecord_disappearing_photo">Foto që tretet</string>
   <string name="ThreadRecord_s_is_on_signal">%s është në Signal! </string>
   <string name="ThreadRecord_disappearing_messages_disabled">Zhdukja e mesazheve është e çaktivizuar</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Koha për zhdukje mesazhesh është vënë %s</string>
@@ -687,6 +708,7 @@
   <string name="MessageNotifier_mark_read">Vëri shenjë si të lexuar</string>
   <string name="MessageNotifier_media_message">Mesazh media</string>
   <string name="MessageNotifier_sticker">Ngjitës</string>
+  <string name="MessageNotifier_disappearing_photo">Foto që tretet</string>
   <string name="MessageNotifier_reply">Përgjigju</string>
   <string name="MessageNotifier_signal_message">Mesazhe Signal</string>
   <string name="MessageNotifier_unsecured_sms">SMS e pasiguruar</string>
@@ -742,8 +764,12 @@
   <!--WebRtcCallControls Content Descriptions-->
   <string name="WebRtcCallControls_contact_photo_description">Foto kontakti</string>
   <string name="WebRtcCallControls_speaker_button_description">Altoparlant</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">Bluetooth</string>
   <string name="WebRtcCallControls_mute_button_description">Heshtoje</string>
+  <string name="WebRtcCallControls_your_camera_button_description">Kamera juaj</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Kalo te kamera e pasme</string>
   <string name="WebRtcCallControls_answer_call_description">Përgjigju thirrjes</string>
+  <string name="WebRtcCallControls_reject_call_description">Mos e prano thirrjen</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Audio</string>
   <string name="attachment_type_selector__audio_description">Audio</string>
@@ -767,6 +793,9 @@
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Jepni emër ose numër</string>
   <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">Spastro tekstin e dhënë</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">Shfaq tastierën</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">Shfaq dialpad-in</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">S\’ka kontakte.</string>
   <string name="contact_selection_group_activity__finding_contacts">Po ngarkohen kontakte…</string>
@@ -1172,6 +1201,7 @@
   <string name="conversation_list_batch_archive__menu_archive_selected">Arkivo të përzgjedhurit</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Çarkivo të përzgjedhurit</string>
   <!--conversation_list-->
+  <string name="conversation_list_settings_shortcut">Shkurtore rregullimesh</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Foto Kontakti</string>
   <string name="conversation_list_item_view__archived">Të arkivuar</string>
@@ -1179,8 +1209,10 @@
   <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">Hiç. Fare. Zero. E zbrazët.\n I keni lexuar krejt!</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">Bisedë e re</string>
+  <string name="conversation_list_fragment__open_camera_description">Hape Kamerën</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Sajoni diçka për shkrim në shtëpi. Fillojani duke shkruar një mesazh për një shok.</string>
   <!--conversation_secure_verified-->
+  <string name="conversation_secure_verified__menu_reset_secure_session">Rikthe te parazgjedhjen sesionin e sigurt</string>
   <!--conversation_muted-->
   <string name="conversation_muted__unmute">Çheshtoji</string>
   <!--conversation_unmuted-->
