--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -61,7 +61,8 @@
   <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Signal behöver behörigheten Plats för att bifoga platser men har nekats den permanent. Fortsätt till inställningsmenyn för Appar och aviseringar, välj \"Behörigheter\" och aktivera \"Plats\".</string>
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal behöver behörigheten Kamera för att ta bilder men har nekats den permanent. Fortsätt till inställningsmenyn för Appar och aviseringar, välj \"Behörigheter\" och aktivera \"Kamera\".</string>
   <!--AttachmentUploadJob-->
-  <string name="AttachmentUploadJob_uploading_media">Ladda upp media...</string>
+  <string name="AttachmentUploadJob_uploading_media">Laddar upp media...</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Komprimerar video...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Fel vid uppspelning av ljud!</string>
   <!--BlockedContactsActivity-->
@@ -74,8 +75,11 @@
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Inkommande samtal</string>
   <!--CameraActivity-->
-  <string name="CameraActivity_image_save_failure">Misslyckades med att spara bilden.</string>
+  <string name="CameraActivity_image_save_failure">Det gick inte att spara bilden.</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">Ta foto</string>
+  <string name="CameraXFragment_change_camera_description">Byt kamera</string>
+  <string name="CameraXFragment_open_gallery_description">Öppna galleri</string>
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">Senaste kontakter</string>
   <string name="CameraContacts_signal_contacts">Signal-kontakter</string>
@@ -176,7 +180,7 @@
   <string name="ConversationActivity_no">Nej</string>
   <string name="ConversationActivity_search_position">%1$d av %2$d</string>
   <string name="ConversationActivity_no_results">Inga resultat</string>
-  <string name="ConversationActivity_sticker_pack_installed">Klistermärkepaket installerat</string>
+  <string name="ConversationActivity_sticker_pack_installed">Klistermärkespaket installerat</string>
   <string name="ConversationActivity_new_say_it_with_stickers">Nytt! Säg det med klistermärken</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
@@ -218,6 +222,7 @@
   <string name="ConversationFragment_deleting_messages">Raderar meddelanden...</string>
   <string name="ConversationFragment_quoted_message_not_found">Hittade inte originalmeddelandet.</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Originalmeddelandet inte längre tillgänglig.</string>
+  <string name="ConversationFragment_failed_to_open_message">Det gick inte att öppna meddelandet</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Det finns ingen webbläsare installerad på din enhet.</string>
   <!--ConversationListFragment-->
@@ -256,6 +261,7 @@
   <string name="CreateProfileActivity_profile_name">Profilnamn</string>
   <string name="CreateProfileActivity_set_up_your_profile">Ställ in din profil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal-profiler är end-to-end-krypterade och Signal-tjänsten har aldrig tillgång till denna information.</string>
+  <string name="CreateProfileActivity_set_avatar_description">Ställ in avatar</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Använder anpassade: %s</string>
   <string name="CustomDefaultPreference_using_default">Använder standard: %s</string>
@@ -273,7 +279,7 @@
   <!--DeviceListActivity-->
   <string name="DeviceListActivity_unlink_s">Koppla bort \'%s\'?</string>
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">Genom att koppla bort denna enhet kommer den inte längre kunna skicka eller få meddelanden.</string>
-  <string name="DeviceListActivity_network_connection_failed">Nätverksanslutningen misslyckades</string>
+  <string name="DeviceListActivity_network_connection_failed">Nätverksanslutning misslyckades</string>
   <string name="DeviceListActivity_try_again">Försök igen</string>
   <string name="DeviceListActivity_unlinking_device">Kopplar bort enhet...</string>
   <string name="DeviceListActivity_unlinking_device_no_ellipsis">Kopplar bort enhet</string>
@@ -413,6 +419,7 @@
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Fel vid hämtning av MMS-meddelanden, tryck för att försöka igen</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Skicka till %s</string>
+  <string name="MediaPickerActivity__menu_open_camera">Öppna kameran</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Tryck för att välja</string>
   <!--MediaSendActivity-->
@@ -615,7 +622,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="StickerPackPreviewActivity_install">Installera</string>
   <string name="StickerPackPreviewActivity_remove">Ta bort</string>
   <string name="StickerPackPreviewActivity_stickers">Stickers</string>
-  <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Det gick inte att läsa in klistermärkepaketet</string>
+  <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Det gick inte att läsa in klistermärkespaketet</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Grupp uppdaterad</string>
   <string name="ThreadRecord_left_the_group">Lämnade gruppen</string>
@@ -757,8 +764,12 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <!--WebRtcCallControls Content Descriptions-->
   <string name="WebRtcCallControls_contact_photo_description">Kontaktfoto</string>
   <string name="WebRtcCallControls_speaker_button_description">Högtalare</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">Bluetooth</string>
   <string name="WebRtcCallControls_mute_button_description">Mikrofon av</string>
+  <string name="WebRtcCallControls_your_camera_button_description">Din kamera</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Växla till bakre kamera</string>
   <string name="WebRtcCallControls_answer_call_description">Svara på samtal</string>
+  <string name="WebRtcCallControls_reject_call_description">Avvisa samtal</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Ljud</string>
   <string name="attachment_type_selector__audio_description">Ljud</string>
@@ -782,6 +793,9 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Ange namn eller nummer</string>
   <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">Rensa inmatad text</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">Visa tangentbordet</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">Visa knappsatsen</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Inga kontakter.</string>
   <string name="contact_selection_group_activity__finding_contacts">Läser in kontakter…</string>
@@ -1188,6 +1202,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="conversation_list_batch_archive__menu_archive_selected">Arkiv valt</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Avarkivera markerade</string>
   <!--conversation_list-->
+  <string name="conversation_list_settings_shortcut">Genvägsinställningar</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Kontaktfoto</string>
   <string name="conversation_list_item_view__archived">Arkiverad</string>
@@ -1195,6 +1210,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">Tomt. Slut. Öde. Du har inga meddelanden!</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">Ny konversation</string>
+  <string name="conversation_list_fragment__open_camera_description">Öppna kameran</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Ge din inkorg något att visa upp. Kom igång genom att skriva till en vän.</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">Starta om säker session</string>
